--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "### Regras da aplicação",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsx watch src/server.ts",
+    "lint": "eslint src --ext .ts --fix"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@rocketseat/eslint-config": "^2.1.0",
+    "@types/node": "^20.10.4",
+    "eslint": "^8.55.0",
+    "tsx": "^4.6.2",
     "typescript": "^5.3.3"
   },
   "dependencies": {
