fix: adjust node version

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "### Regras da aplicação",
   "main": "index.js",
   "engines": {
-    "node": ">=18"
+    "node": "18"
   },
   "scripts": {
     "dev": "tsx watch src/server.ts",
