--- a/.env.test.example
+++ b/.env.test.example
@@ -1,4 +1,5 @@
-NODE_ENV = test
-DATABASE_URL ="./db/test.db"
-DATABASE_CLIENT = sqlite
-PORT=
+NODE_ENV = 
+DATABASE_URL = 
+DATABASE_CLIENT = 
+
+PORT= 
